chaincode - restapi edited
